# prollama

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  E2E_TEST_REPORT.md  LICENSE  Makefile  PKG-INFO  README.md  README_SECURE_TOKENS.md  docker-compose.yml  goal.yaml  pyproject.toml  test_advanced_filtering_safe.py  test_comparison_safe.py  test_integration.sh  test_real_projects.py  test_secrets_sample_safe.py
.github/workflows/: ci.yml
docs/: README.md  anonymization.md  api-reference.md  cli-reference.md  configuration.md  deployment.md  executor.md  index.md  proxy.md  pyqual-integration.md  quickstart.md  routing.md  shell.md
examples/: README.md  anonymize_code.py  batch_scan.py  routing_demo.py
examples/sample_code/: api_secrets.py  fintech_app.py  healthcare_app.py  ml_pipeline.py
examples/workflow/: auto_detection.sh  autodetection_demo.sh  autodetection_output.txt
project/: README.md  analysis.toon.yaml  calls.mmd  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  project.toon.yaml  prompt.txt  validation.toon.yaml
src/devloop/: __init__.py
src/prollama/: __init__.py  __main__.py  auth.py  cli.py  config.py  core.py  llm.py  models.py  pr.py  proxy.py  shell.py  tickets.py
src/prollama/anonymizer/: __init__.py  ast_layer.py  enhanced_layer.py  nlp_layer.py  pipeline.py  regex_layer.py
src/prollama/executor/: __init__.py  task_executor.py
src/prollama/integrations/: __init__.py  planfile.py
src/prollama/router/: __init__.py  model_router.py
src/prollama/security/: content_filter.py
src/prollama/testing/: token_generators.py
tests/: conftest.py  test_ast.py  test_cli.py  test_config.py  test_core.py  test_executor.py  test_integration.py  test_nlp.py  test_prollama.py  test_router.py
tests/fixtures/: clean_code.py
